[tool.poetry]
name = "forkscan"
version = "0.1.0"
description = "Sports betting arbitrage scanner"
authors = ["Your Name acmasok@gmail.com"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
pydantic = "^2.6.0"
python-telegram-bot = "^20.8"
aiohttp = "^3.9.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
ruff = "^0.2.0"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "B", "I"]